@startuml
!pragma layout smetana
skinparam componentStyle rectangle
title SageParser library architecture

class ParserBuilder {
  +setReader(unique_ptr<IReader>)
  +setProcessors(vector<unique_ptr<IProcessor>>)
  +setWriter(unique_ptr<IWriter>)
  +performOperation()
}

class Table {
  +addColumn(name)
  +addRow(values)
  +at(row, column) : string
}

interface IReader {
  +read() : shared_ptr<Table>
}
class CsvReader
class XmlReader

interface IProcessor {
  +process(shared_ptr<Table>) : shared_ptr<Table>
}
class DefaultTableProcessor

interface IWriter {
  +write(shared_ptr<Table>)
}
class CsvWriter
class XmlWriter

CsvReader --|> IReader
XmlReader --|> IReader
DefaultTableProcessor --|> IProcessor
CsvWriter --|> IWriter
XmlWriter --|> IWriter

ParserBuilder o-- IReader
ParserBuilder o-- "0..*" IProcessor
ParserBuilder o-- IWriter
IReader --> Table : creates
IProcessor --> Table : transforms copy
IWriter --> Table : serializes
@enduml
